chore: configuração do checkstyle para padronizar a aplição